--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="home" id="home">
         <div class="hometext">
-            <h1>PRIME TIME</h1>
+            <h1>RELLOTGEEE</h1>
             <h2>El temps de calitat</h2>
         </div>
     </section>
